--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ fido2 = "*"
 SQLAlchemy = "*"
 Flask-SQLAlchemy = "*"
 Flask-Login = "*"
+pyopenssl = "*"
 python-ldap = "./python_ldap-3.2.0-cp38-cp38-win32.whl"
 
 [dev-packages]
@@ -17,4 +18,4 @@ python-ldap = "./python_ldap-3.2.0-cp38-cp38-win32.whl"
 python_version = "3.8"
 
 [scripts]
-flask = "flask run"
+flask = "flask run --cert=adhoc"
